syntax = "proto3";
package msg;

option go_package = "./msg";


enum MsgId {
	ID_RequestGMCommand = 0;
	ID_ResponseGMCommand = 1;
	ID_RequestRegist = 2;
	ID_ResponseRegist = 3;
	ID_RequestLogin = 4;
	ID_ResponseLogin = 5;
	ID_RequestLogout = 6;
	ID_ResponseLogout = 7;
	ID_ResponseKickOut = 8;
	ID_RequestLoadItems = 9;
	ID_ResponseLoadItems = 10;
	ID_NotifyUpdateItem = 11;
	ID_RequestClientHeart = 12;
	ID_ResponseClientHert = 13;
	ID_RequestOreTotal = 14;
	ID_ResponseOreTotal = 15;
	ID_RequestStartOre = 16;
	ID_ResponseStartOre = 17;
	ID_RequestEndOre = 18;
	ID_ResponseEndOre = 19;
	ID_RequestUpgradeOreSpeed = 20;
	ID_ResponseUpgradeOreSpeed = 21;
	ID_RequestOreInfo = 22;
	ID_ResponseOreInfo = 23;
	ID_RequestEnterBattle = 24;
	ID_ResponseEnterBattle = 25;
	ID_RequestLeaveBattle = 26;
	ID_ResponseLeaveBattle = 27;
	ID_RequestLoadTasks = 28;
	ID_ResponseLoadTasks = 29;
	ID_NotifyUpdateTask = 30;

	ID_RequestInterServerInfo = 10000;
	ID_ResponseInterServerInfo = 10001;
	ID_ReqeustInterGs2BattlHallEnter = 10002;
	ID_ResponseInterGs2BattlHallEnter = 10003;
	ID_RequestInterBattlHall2SceneEnter = 10004;
	ID_ResponseInterBattlHall2SceneEnter = 10005;
	ID_ReqeustInterGs2BattlHallLeave = 10006;
	ID_ResponseInterGs2BattlHallLeave = 10007;
	ID_RequestInterBattlHall2SceneLeave = 10008;
	ID_ResponseInterBattlHall2SceneLeave = 10009;

	ID_RequestAddFri = 11000;
	ID_ResponseAddFri = 11001;

	ID_RequestInterGetOreInfo = 12000;
	ID_ResponseInterGetOreInfo = 12001;
	ID_RequestInterAddOrePlayer = 12002;
	ID_ResponseInterAddOrePlayer = 12003;
	ID_RequestInterUpdateOrePlayer = 12004;
	ID_ResponseInterUpdateOrePlayer = 12005;
	ID_RequestInterSettleOrePlayer = 12006;
	ID_ResponseInterSettleOrePlayer = 12007;
	ID_RequestInterTransMessage = 12008;
	ID_RequestInterAddFri = 12009;
}

enum GMCommand {
	Command_NONE = 0;
	AddItem = 1; //添加道具 数据格式 [{"itemId":1, "num":2}, {"itemId":2, "num":1}]
	ReloadConfig = 2;//重新加载配置文件["item","system"]
}

enum ErrCode {
	ERR_NONE = 0;
	SUCC = 1;
	SYSTEM_ERROR = 2; // 系统错误
	USER_ID_EXIST = 3;// uid 已经存在
	USERID_EMPTY = 4;//uid 空
	USERID_OVER_MAX_LEN = 5;//超过uid最大长度
	FORBIDDEN_USER = 6;// 禁止用户登录
	ISLOGINING = 7; // 登录中
	OTHER_LOGIN = 8; // 其他地方登录
	USER_NOT_LOGIN = 10;//玩家没有登录
	HAS_START_ORE = 11; // 已经开始挖矿了
	NO_START_ORE = 12; // 没有开始挖矿
	NO_ENOUGH_ITEM = 13;// 没有足够的道具
	NO_ORE_RESOURCE = 14; // 没有矿洞资源了
	USER_IN_BATTLE = 15; // 玩家在战斗中了
	USER_NOT_IN_BATTLE = 16;// 玩家不在战斗中
	NO_BATTLE_SCENE = 17;// 没有战斗场景服务器了
	SCENE_SERVER_NOT_EXIST = 18;// 场景服务器不存在
}

enum ServerType {
	SERVER_TYPE_NONE = 0;
	SERVER_TYPE_GS  = 1;//gs 服务器
	SERVER_TYPE_BATTLE_HALL = 2; // 战斗大厅服务器
	SERVER_TYPE_BATTLE_SCENE = 3;// 战斗场景服务器
}